[tool.poetry]
name = "amortize-loans"
version = "0.1.0"
description = ""
authors = ["snidarian", "caerulescens"]
readme = "README.rst"
packages = [{include = "amortize_loans"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
coverage = "^7.2.7"
cython = "^0.29.35"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
